the-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      volumes:
        - name: the-project-volume
          persistentVolumeClaim:
            claimName: the-project-claim
        - name: the-project-config-volume
          configMap:
            name: the-project-config-map
      containers:
        - name: the-project-frontend
          image: the-project-frontend:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: the-project-volume
              mountPath: /usr/src/app/data
            - name: the-project-config-volume
              mountPath: /usr/src/app/.env
              subPath: .env
        - name: the-project-backend
          image: the-project-backend:latest
          volumeMounts:
            - name: the-project-volume
              mountPath: /usr/src/app/data
          imagePullPolicy: IfNotPresent
